fix(layout-auth): fixed scrolling on mobile

--- a/client/src/app/layouts/layout-auth/layout-auth.component.scss
+++ b/client/src/app/layouts/layout-auth/layout-auth.component.scss
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+  overflow: auto;
 
   position: relative;
 
